--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.2.0",
+    "@reduxjs/toolkit": "^2.11.2",
+    "axios": "^1.13.5",
     "class-variance-authority": "^0.7.1",
+    "cors": "^2.8.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-helmet": "^6.1.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.13.0",
     "tailwind-merge": "^3.4.0"
   },
